tests/snapshots/yaml_suite_snapshots__yaml_suite_F6MC_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: More indented lines at the beginning of folded block scalars
  from: "@perlpunk"
  tags: folded indent
  yaml: "---\na: >2\n   more indented\n  regular\nb: >2\n\n\n   more indented\n  regular\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL > more indented\\nregular\\n\n   =VAL :b\n   =VAL >\\n\\n more indented\\nregular\\n\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": \" more indented\\nregular\\n\",\n  \"b\": \"\\n\\n more indented\\nregular\\n\"\n}\n"
  emit: "---\na: >2\n   more indented\n  regular\nb: >2\n\n\n   more indented\n  regular\n"
