tests/snapshots/yaml_suite_snapshots__yaml_suite_F6MC_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: "---\na: >2\n   more indented\n  regular\nb: >2\n\n\n   more indented\n  regular\n"
  from: "@perlpunk"
  json: "{\n  \"a\": \" more indented\\nregular\\n\",\n  \"b\": \"\\n\\n more indented\\nregular\\n\"\n}\n"
  name: More indented lines at the beginning of folded block scalars
  tags: folded indent
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL > more indented\\nregular\\n\n   =VAL :b\n   =VAL >\\n\\n more indented\\nregular\\n\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\na: >2\n   more indented\n  regular\nb: >2\n\n\n   more indented\n  regular\n"
