tests/snapshots/yaml_suite_snapshots__yaml_suite_F8F9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "strip: |-\n  # text\nclip: |\n  # text\nkeep: |+\n  # text\n\n...\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2795435"
  json: "{\n  \"strip\": \"# text\",\n  \"clip\": \"# text\\n\",\n  \"keep\": \"# text\\n\\n\"\n}\n"
  name: Spec Example 8.5. Chomping Trailing Lines
  tags: spec literal scalar comment
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :strip\n   =VAL |# text\n   =VAL :clip\n   =VAL |# text\\n\n   =VAL :keep\n   =VAL |# text\\n\\n\n  -MAP\n -DOC\n-STR\n"
  yaml: " # Strip\n  # Comments:\nstrip: |-\n  # text\n␣␣\n # Clip\n  # comments:\n\nclip: |\n  # text\n␣\n # Keep\n  # comments:\n\nkeep: |+\n  # text\n\n # Trail\n  # comments.\n"
